src/test/resources/extension/valid/newtype/unionWhen.awsl
begin

newtype IntTree is union
     Nil;
     Leaf of (int x);
     Node of (IntTree left, int x, IntTree right);
end

int f(int x, int y) is
    return x + y;
end

IntTree leaf1 = Leaf(3);
IntTree leaf2 = Leaf(8);
IntTree node1 = Node(leaf1, 4, leaf2);

when node1:
    is Nil -> println "nah!";
    is Leaf(x) -> println "naah!";
    is Node(l, x, r) ->
        println "I am a Node!";
        println x;
        when l: is Leaf(x) ->
                    println "I am a leaf!";
                    println x;
        end;
end;

end